added article picture, edit view article validated

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,5 +1,5 @@
 NotBlank=Le champ est obligatoire
 Email=L'email est mal écrit
 NotEmpty=Le champ est obligatoire
-Pattern=Les caractères doivent être alphanumériques
+Pattern=Les caract\u00e8res doivent \u00eatre alphanum\u00e9riques
 NotNull=Le champ est obligatoire
