adding error messages when creating a sale

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -3,3 +3,4 @@ Email=The email is malformed
 NotEmpty=The field is required
 Pattern=Characters must be alphanumeric
 NotNull=The field is required
+DateRange.soldArticles=End date must be later than start date
